<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThemesActivity">

    <!-- Título -->
    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selecciona_un_tema"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/t_tulo_de_la_secci_n_de_temas"
        tools:ignore="VisualLintOverlap" />

    <!-- ListView para los temas -->
    <ListView
        android:id="@+id/themesListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/titleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/verseTextView"/>

    <!-- TextView para mostrar el versículo relacionado con el tema -->
    <TextView
        android:id="@+id/verseTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selecciona_un_tema_para_ver_un_vers_culo"
        android:textSize="16sp"
        android:textColor="#000000"
        android:paddingTop="20dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/themesListView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
